--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "dependencies": {
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-data-table-component": "^6.11.7",
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
