--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.7",
+    "next": "^10.0.9",
     "react": "17.0.1",
     "react-data-table-component": "^6.11.7",
     "react-dom": "17.0.1",
