--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3005"
+    "start": "next start"
   },
   "dependencies": {
     "next": "^10.0.9",
